# py_tsyganenko

./: .gitignore  meson.build  pyproject.toml
.github/workflows/: ccpp.yml  pythonpublish-linux.yml  pythonpublish-osx.yml  pythonpublish-win.yml  tests-win.yml
conda-recipe/: build.sh  meta.yaml
src/: T96.for
wrapper/: wrapper.cpp
